[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "townshipamerica"
version = "1.0.0"
description = "Python SDK for the Township America PLSS coordinate conversion API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Township America", email = "hello@townshipamerica.com" },
]
keywords = [
    "plss",
    "township",
    "range",
    "section",
    "gps",
    "coordinates",
    "geocoding",
    "gis",
    "land-survey",
    "blm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0,<1.0",
    "pydantic>=2.0.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://townshipamerica.com"
Documentation = "https://townshipamerica.com/api"
Repository = "https://github.com/townshipamerica/python-sdk"
Issues = "https://github.com/townshipamerica/python-sdk/issues"
